--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -1,42 +1,53 @@
 {%  load i18n %}
+
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+  <div class="container-fluid">
 
-        <a class="navbar-brand" href="/"> {% trans "Home" %} </a>
-        <ul class="nav navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/order/"> {% trans "Orders" %} </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/order/add/"> {% trans "New Order" %} </a>
-          </li>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" 
+        class="navbar-toggle collapsed" data-toggle="collapse" 
+       data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <i class="fa fa-bars" aria-hidden="true"></i>
+      </button>
+      <a class="navbar-brand" href="/">{% trans "Home" %}</a>
+      <a class="navlink {% if request.resolver_match.url_name == 'core.order' %} active {% endif %}"
+         href="{% url 'core.order' %}"> {% trans "Orders" %}</a>
+      <a class="navlink {% if request.resolver_match.url_name == 'core.order_add' %} active {% endif %}" href="{% url 'core.order_add' %}">{% trans "New Order" %}</a>
+    </div>
 
-        </ul>
 
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'core.user_profile'  %}"> {% trans "User" %}: <strong> {{ user.username }} </strong></a>
-            <input type="hidden" name="user_id" id="user_id" value="{{ user.id }}">
-
-          </li>
-
-          <li class="nav-item">
-           <a class="nav-link" href="{% url 'accounts.logout' %}">{% trans "Logout" %}</a>
-          </li>
-
-
+          <li><a href="{% url 'core.user_profile' %}">{{ user.username }}</a></li>
+          <li><a href="{% url 'accounts.logout' %}">{% trans "Logout" %}</a></li>
         {% else %}
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts.login' %}"> {% trans "Login" %} </a>
-          </li>
-          <li>
-            <a class="nav-link" href="{% url 'core.user_registration' %}"> {% trans "Register" %} </a>
-          </li>
-
-        {% endif %}
+          <li><a href="{% url 'accounts.login' %}">{% trans "Login" %}</a></li>
+          <li><a href="{% url 'core.user_registration' %}">{% trans "Register" %}</a></li>
+        {% endif %} 
 
 
-        </ul>
-    </nav>
+        {% get_language_info_list for LANGUAGES as languages %}
+        <li>
+          <form class="form" id="formLogin" action="{% url 'set_language' %}" method="post">
+            {% csrf_token %}
+
+            <input name="next" type="hidden" value="{{ redirect_to }}" />
+            <select name="language">
+            {% get_language_info_list for LANGUAGES as languages %}
+            {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+            {% endfor %}
+            </select>
+            <input type="submit" class="btn btn-warning" value="Go" />
+          </form>            
+        </li>
+
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
